Sun Apr 28 12:27:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/ace_flags.bor:
          Added cflags and lib for new TAO IFRService library

Sat Apr 27 20:00:27 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp: Exclude template files Atomic_Op.cpp and
	  Framework_Component_T.cpp from compilation.

Sat Apr 27 18:10:37 2002  Balachandran Natarajan  <bala@guajira.cs.wustl.edu>

	* ace/Message_Queue_T.cpp (flush): Fixed fuzz error.

Sat Apr 27 17:13:16 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Svc_Handler.cpp: Added a closing '}' for the method
	  ACE_Buffered_Svc_Handler::dump () const. This should fix the
	  compile errors with g++ that will start showing up shortly in
	  the Scoreboard.

	* ace/*makefile: Updated dependencies.

Sat Apr 27 11:16:03 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

        Thanks to Boris Temkin <borist@allcharge.com> for motivating the
	following fixes:

	* ace/Svc_Handler.cpp: Updated the flush_i() method to call the
	  message queue's flush_i() method to avoid deadlocks on platforms
 	  that lack recursive mutexes.

	* ace/Message_Queue_T.{h,cpp}: Added the flush() and flush_i()
	  methods to the ACE_Message_Queue in order to remove messages
 	  without deactivating the queue.  Also refactored the close()
 	  method to use flush_i().

Sat Apr 27 09:26:43 2002  Edan Ayal <edanayal@yahoo.com> 
  
        Added support (currently under win32 only) for asynchronous
	scattered read and asynchronous gathered write with socket streams
	and with files.

	* ace/Asynch_IO.{h cpp}: Added methods 'readv' to
	  ACE_Asynch_Read_Stream/File, and 'writev' to
 	  ACE_Asynch_Write_Stream/File, for win32 only. The methods just
 	  delegate to the implementation.

	* ace/Asynch_IO_Impl.h: Added pure virtual methods
	  'readv' to ACE_Asynch_Read_Stream/File_Impl, and 'writev' to
 	  ACE_Asynch_Write_Stream/File_Impl, for win32 only.
