@@ -88,13 +88,17 @@ static const size_t MIN_TIME = 1;    // min 1 sec
 static const size_t MAX_TIME = 3600; // max 1 hour
 static size_t seconds = 2;  // default time to run - 2 seconds
 
-static ACE_TCHAR data[] =
-  "GET / HTTP/1.1\r\n"
+static ACE_TCHAR request_line[] =
+  "GET / HTTP/1.1\r\n";
+
+static ACE_TCHAR headers[] =
   "Accept: */*\r\n"
   "Accept-Language: C++\r\n"
   "Accept-Encoding: gzip, deflate\r\n"
   "User-Agent: Proactor_Test/1.0 (non-compatible)\r\n"
-  "Connection: Keep-Alive\r\n"
+  "Connection: Keep-Alive\r\n";
+
+static ACE_TCHAR end_of_request_header[] =
   "\r\n";
 
 class LogLocker 
@@ -822,8 +826,6 @@ private:
   int  index_;
   Connector * connector_;
 
-  char send_buf_[1024];
-
   ACE_Asynch_Read_Stream rs_;
   ACE_Asynch_Write_Stream ws_;
   ACE_HANDLE handle_;
@@ -1007,8 +1009,6 @@ Sender::Sender (Connector * connector, int index)
 {
   if (this->connector_ != 0)
     this->connector_->on_new_sender (*this);
-
-  ACE_OS::strcpy (this->send_buf_, data);
 }
 
 Sender::~Sender (void)
@@ -1087,21 +1087,61 @@ Sender::initiate_write_stream (void)
   if (this->flg_cancel_ != 0)
     return -1;
 
-  size_t nbytes = ACE_OS::strlen (this->send_buf_);
+  static const size_t request_line_length = ACE_OS::strlen (request_line);
+  static const size_t headers_length = ACE_OS::strlen (headers);
+  static const size_t end_of_request_header_length = ACE_OS::strlen (end_of_request_header);
 
+#if (defined (ACE_WIN32) && !defined (ACE_HAS_WINCE))
+  ACE_Message_Block *mb1 = 0, 
+                    *mb2 = 0, 
+                    *mb3 = 0;
+
+  ACE_NEW_RETURN (mb1, ACE_Message_Block (request_line_length), -1);
+  ACE_NEW_RETURN (mb2, ACE_Message_Block (headers_length), -1);
+  ACE_NEW_RETURN (mb3, ACE_Message_Block (end_of_request_header_length), -1);
+
+  mb1->init (request_line, request_line_length);
+  mb1->wr_ptr (request_line_length);
+  mb2->init (headers, headers_length);
+  mb2->wr_ptr (headers_length);
+  mb3->init (end_of_request_header, end_of_request_header_length);
+  mb3->wr_ptr (end_of_request_header_length);
+
+  // chain them together
+  mb1->cont (mb2);
+  mb2->cont (mb3);
+
+  if (this->ws_.writev (*mb1, mb1->total_length ()) == -1)
+    {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT ("%p\n"),
+                        ACE_TEXT ("Sender::ACE_Asynch_Stream::writev")),
+                       -1);
+    }
+#else /* (defined (ACE_WIN32) && !defined (ACE_HAS_WINCE)) */
   ACE_Message_Block *mb = 0;
-  ACE_NEW_RETURN (mb, ACE_Message_Block (nbytes + 8), -1);
 
-  mb->init (this->send_buf_, nbytes);
-  mb->wr_ptr (nbytes);
+  ACE_NEW_RETURN (mb, 
+                  ACE_Message_Block (request_line_length
+                                     + headers_length
+                                     + end_of_request_header_length)
+                  , -1);
 
-  if (this->ws_.write (*mb, nbytes) == -1)
+  mb->copy (request_line, request_line_length);
+  mb->wr_ptr (request_line_length);
+  mb->copy (headers, headers_length);
+  mb->wr_ptr (headers_length);
+  mb->copy (end_of_request_header, end_of_request_header_length);
+  mb->wr_ptr (end_of_request_header_length);
+
+  if (this->ws_.write (*mb, mb->length ()) == -1)
     {
       ACE_ERROR_RETURN((LM_ERROR,
                         ACE_TEXT ("%p\n"),
                         ACE_TEXT ("Sender::ACE_Asynch_Stream::write")),
                        -1);
     }
+#endif /* (defined (ACE_WIN32) && !defined (ACE_HAS_WINCE)) */
 
   this->io_count_++;
   return 0;
@@ -1115,11 +1155,42 @@ Sender::initiate_read_stream (void)
   if (this->flg_cancel_ != 0)
     return -1;
 
-  ACE_Message_Block *mb = 0;
-  ACE_NEW_RETURN (mb, ACE_Message_Block (1024 + 1), -1);
+  static const size_t request_line_length = ACE_OS::strlen (request_line);
+  static const size_t headers_length = ACE_OS::strlen (headers);
+  static const size_t end_of_request_header_length = ACE_OS::strlen (end_of_request_header);
+
+#if (defined (ACE_WIN32) && !defined (ACE_HAS_WINCE))
+  ACE_Message_Block *mb1 = 0, 
+                    *mb2 = 0, 
+                    *mb3 = 0;
+
+  ACE_NEW_RETURN (mb1, ACE_Message_Block (request_line_length), -1);
+  ACE_NEW_RETURN (mb2, ACE_Message_Block (headers_length), -1);
+  ACE_NEW_RETURN (mb3, ACE_Message_Block (end_of_request_header_length), -1);
+
+  mb1->cont (mb2);
+  mb2->cont (mb3);
 
   // Inititiate read
-  if (this->rs_.read (*mb, mb->size () - 1) == -1)
+  if (this->rs_.readv (*mb1, mb1->total_size () - 1) == -1)
+    {
+      mb1->release ();
+      ACE_ERROR_RETURN ((LM_ERROR,
+                         ACE_TEXT ("%p\n"),
+                         ACE_TEXT ("Sender::ACE_Asynch_Read_Stream::read")),
+                        -1);
+    }
+#else /* (defined (ACE_WIN32) && !defined (ACE_HAS_WINCE)) */
+  ACE_Message_Block *mb = 0;
+
+  ACE_NEW_RETURN (mb, 
+                  ACE_Message_Block (request_line_length
+                                     + headers_length
+                                     + end_of_request_header_length)
+                  , -1);
+
+  // Inititiate read
+  if (this->rs_.read (*mb, mb->total_size () - 1) == -1)
     {
       mb->release ();
       ACE_ERROR_RETURN ((LM_ERROR,
@@ -1127,6 +1198,7 @@ Sender::initiate_read_stream (void)
                          ACE_TEXT ("Sender::ACE_Asynch_Read_Stream::read")),
                         -1);
     }
+#endif /* (defined (ACE_WIN32) && !defined (ACE_HAS_WINCE)) */
 
   this->io_count_++;
   return 0;
@@ -1142,10 +1214,6 @@ Sender::handle_write_stream (const ACE_Asynch_Write_Stream::Result &result)
       || result.error () != 0)
     {
       LogLocker log_lock;
-
-      // Reset pointers.
-      //mb.rd_ptr()[0] ='\0';
-      mb.rd_ptr (mb.rd_ptr () - result.bytes_transferred ());
 
       ACE_DEBUG ((LM_DEBUG,
                   ACE_TEXT ("**** Sender::handle_write_stream() SessionId = %d ****\n"),
@@ -1178,10 +1246,46 @@ Sender::handle_write_stream (const ACE_Asynch_Write_Stream::Result &result)
                   ACE_TEXT ("%s = %d\n"),
                   ACE_TEXT ("error"),
                   result.error ()));
+
+#if (defined (ACE_WIN32) && !defined (ACE_HAS_WINCE))
+      size_t bytes_transferred = result.bytes_transferred ();
+      char index = 0;
+      for (ACE_Message_Block* mb_i = &mb; 
+           (mb_i != 0) && (bytes_transferred > 0); 
+           mb_i = mb_i->cont ())
+      {
+        if (mb_i->rd_ptr () - mb_i->base () >= bytes_transferred)
+        {
+          mb_i->rd_ptr (- bytes_transferred);
+          bytes_transferred = 0;
+        }
+        else
+        {
+          size_t len = mb_i->rd_ptr () - mb_i->base ();
+          mb_i->rd_ptr (- len);
+          bytes_transferred -= len;
+        }
+
+        ++index;
+        char message[1024];
+        ACE_OS::strncpy (message, mb_i->rd_ptr (), mb_i->length ());
+        message[mb_i->length ()] = 0;
+        ACE_DEBUG ((LM_DEBUG,
+                    ACE_TEXT ("%s%d = %s\n"),
+                    ACE_TEXT ("message_block, part "),
+                    index,
+                    message));
+      }
+#else /* (defined (ACE_WIN32) && !defined (ACE_HAS_WINCE)) */
+      char message[1024];
+      ACE_OS::strncpy (message, mb.rd_ptr (), mb.length ());
+      message[mb.length ()] = 0;
       ACE_DEBUG ((LM_DEBUG,
                   ACE_TEXT ("%s = %s\n"),
                   ACE_TEXT ("message_block"),
-                  mb.rd_ptr ()));
+                  message));
+#endif /* (defined (ACE_WIN32) && !defined (ACE_HAS_WINCE)) */
+
       ACE_DEBUG ((LM_DEBUG,
                   ACE_TEXT ("**** end of message ****************\n")));
     }
@@ -1215,9 +1319,6 @@ Sender::handle_read_stream (const ACE_Asynch_Read_Stream::Result &result)
     {
       LogLocker log_lock;
 
-      // Reset pointers.
-      mb.rd_ptr ()[result.bytes_transferred ()] = '\0';
-
       ACE_DEBUG ((LM_DEBUG,
                   ACE_TEXT ("**** Sender::handle_read_stream() SessionId = %d ****\n"),
                   index_));
@@ -1249,10 +1350,33 @@ Sender::handle_read_stream (const ACE_Asynch_Read_Stream::Result &result)
                   ACE_TEXT ("%s = %d\n"),
                   ACE_TEXT ("error"),
                   result.error ()));
+
+#if (defined (ACE_WIN32) && !defined (ACE_HAS_WINCE))
+      char index = 0;
+      for (ACE_Message_Block* mb_i = &mb; 
+           mb_i != 0; 
+           mb_i = mb_i->cont ())
+      {
+        ++index;
+        char message[1024];
+        ACE_OS::strncpy (message, mb_i->rd_ptr (), mb_i->length ());
+        message[mb_i->length ()] = 0;
+        ACE_DEBUG ((LM_DEBUG,
+                    ACE_TEXT ("%s%d = %s\n"),
+                    ACE_TEXT ("message_block, part "),
+                    index,
+                    message));
+      }
+#else /* (defined (ACE_WIN32) && !defined (ACE_HAS_WINCE)) */
+      char message[1024];
+      ACE_OS::strncpy (message, mb.rd_ptr (), mb.length ());
+      message[mb.length ()] = 0;
       ACE_DEBUG ((LM_DEBUG,
                   ACE_TEXT ("%s = %s\n"),
                   ACE_TEXT ("message_block"),
-                  mb.rd_ptr ()));
+                  message));
+#endif /* (defined (ACE_WIN32) && !defined (ACE_HAS_WINCE)) */
+
       ACE_DEBUG ((LM_DEBUG,
                   ACE_TEXT ("**** end of message ****************\n")));
     }
@@ -1424,6 +1548,8 @@ int
 ACE_TMAIN (int argc, ACE_TCHAR *argv[])
 {
   ACE_START_TEST (ACE_TEXT ("Proactor_Test"));
+
+  ACE_LOG_MSG->set_flags (ACE_Log_Msg::STDERR); // Edan
 
   if (::parse_args (argc, argv) == -1)
     return -1;
