@@ -1,3 +1,9 @@
+Sun Apr 28 08:19:37 2002  Balachandran Natarajan  <bala@guajira.cs.wustl.edu>
+
+	* tests/Proactor_Test.cpp: Added code to test async scatter-gather
+	  IO on Win32. Thanks Edan Ayal <edanayal@yahoo.com> for donating
+	  this. 
+
 Sun Apr 28 12:27:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * include/makeinclude/ace_flags.bor:
